--- a/css/style.css
+++ b/css/style.css
@@ -1,27 +1,33 @@
 *{
     margin: 0; padding: 0;
 }
-.container{
-    width: 100%;
-    height: 100%;
+a { text-decoration: none; display: inline-block; }
+.container {
     margin: 0 auto;
+    max-width: 1272px;
+}
+
+body{
+    font-family: Roboto,Arial,sans-serif;
+    letter-spacing: 0;
 }
 
 .nav{
     background-color: #2874f0; 
-    width: 100%; height: 56px;
+    width: 100%; 
+    padding: 7px 0 7px 0;
 }
 .flipkart-logo {
-    display: grid; 
+    display: flex; 
     justify-content: space-between;
+    flex-direction: column; margin-right: 24px;
 
 }
 .flipkart-logo > img {
-    height: 100%;
     width: 75px;
 }
 .flipkart-logo a{
-text-decoration: none; 
+text-decoration: none; display: inline-block;
 }
 .navbar {
     display: flex;
@@ -38,3 +44,84 @@ text-decoration: none;
 .flipkart-plus-logo{   
     width: 10px;
 }
+
+.search > input[type="text"] {
+ /*   border: none;
+    border-radius: 2px;
+    height: 34px;
+    width: 313px; */
+}
+
+
+/* Styles for wrapping the search box */
+
+.main {
+   /* width: 50%;
+    margin: 50px auto; */
+}
+
+/* Bootstrap 4 text input with search icon */
+
+.navbar > .left{
+    width: 70%;
+    float: left;
+    justify-content: center;
+    display: flex;
+}
+.navbar > .right{
+    width: 30%;
+    float: right;
+    justify-content: space-evenly;
+    display: flex;
+    align-items: center;
+}
+
+.has-search .form-control {
+    padding-left: 2.375rem;
+    display: block;
+    width: 81%;
+    height: calc(1.25rem + 2px);
+    padding: 0.5rem 3.75rem 0.5rem 7.75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #dbdbdb;
+    border-radius: 0.10rem;
+    transition: .15s ease-in-out,box-shadow .15s ease-in-out;
+
+}
+
+.has-search .form-control-feedback {
+    position: absolute;
+    z-index: 2;
+    display: block;
+    width: 59.375rem;
+    height: 2.375rem;
+    line-height: 2.375rem;
+    text-align: center;
+    pointer-events: none;
+    color: #2874f0;
+}
+
+.login-btn > a {
+    color: #2874f0 !important;
+    background-color: white;
+    padding: 5px 40px;
+    text-decoration: none;
+    border: 1px solid #dbdbdb;
+    font-weight: 600;
+    display: inline-block;
+}
+.right a{
+    text-decoration: none;
+    color:white; font-weight: 500;
+    display: inline-block;
+}
+.more > .fa-angle-down { color: white;  }
+.more {transform: rotate(0deg); transition: transform 2s; transition-duration: 3s;}
+.more:hover .fa-angle-down {transform: rotate(180deg); }
+.cart > .fa-shopping-cart { color: white; }  
+
+
