--- a/css/style.css
+++ b/css/style.css
@@ -125,3 +125,30 @@ text-decoration: none; display: inline-block;
 .cart > .fa-shopping-cart { color: white; }  
 
 
+
+/* top offers section starts */
+
+section#top-items {
+    box-shadow: 0 2px 4px 0 rgb(0 0 0 / 25%);
+}
+.top-items-main {
+    display: flex; 
+      padding: 10px 0;     justify-content: space-evenly;
+}
+.top-item > img {
+    height: 67px;
+}
+.top-item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-weight: bold;
+    font-size: 14px;
+}
+.top-item{
+
+}
+.top-item .fa-angle-down { padding: 0 5px; font-weight: bold; }
+.top-item:hover .fa-angle-down {transform: rotate(180deg); }
+
+/* top offers section ends */
