--- a/css/style.css
+++ b/css/style.css
@@ -158,7 +158,9 @@ section#top-items {
   padding: 10px 0;
   justify-content: space-evenly;
 }
-
+.top-item > img {
+  width: 67px;
+}
 .top-item {
   display: flex;
   flex-direction: column;
@@ -166,13 +168,13 @@ section#top-items {
   font-weight: bold;
   font-size: 14px;
 }
-.top-text {
+.top-item {
 }
-.top-text .fa-angle-down {
+.top-item .fa-angle-down {
   padding: 0 5px;
   font-weight: bold;
 }
-.top-text:hover .fa-angle-down {
+.top-item:hover .fa-angle-down {
   transform: rotate(180deg);
 }
 
@@ -197,8 +199,8 @@ section#deals-of-the-day-section {
   align-items: center;
   justify-content: center;
 }
-.left {
-  align-items: center;
+.title .left {
+flex-direction: column;
   display: flex;
 }
 #timer-icon {
@@ -211,6 +213,7 @@ section#deals-of-the-day-section {
   font-weight: 500;
   align-items: center;
 }
+.deals-of-the-day h4 { font-weight: lighter; opacity: 0.7; }
 .deals-of-the-day > .title {
   font-weight: 600;
   padding: 0 0 17px 0;
@@ -294,4 +297,15 @@ section#deals-of-the-day-section {
   justify-content: center;
   min-height: 150px;
 }
+
+
+
+.left h3{ color: #7f7f7f; font-weight: lighter; }
+#books-instru { width: 100%; }
 /* deals of the day section end */
+
+
+/* books and instru start */
+.left h3{ color: #7f7f7f; font-weight: lighter; }
+#books-instru { width: 100%; }
+/*  books and instru end */
