--- a/css/style.css
+++ b/css/style.css
@@ -195,6 +195,7 @@ section#deals-of-the-day-section {
 
 .deals-item-img img {
   width: 100%;
+  height: 150px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -247,8 +248,8 @@ flex-direction: column;
   width: 25%;
 }
 .advertis img {
-  left: 3rem;
-  height: 312px;
+  left: 2rem;
+  height: 348px;
   box-shadow: 0 0px 4px 0px rgb(0 0 0);
   position: relative;
 }
@@ -309,3 +310,11 @@ flex-direction: column;
 .left h3{ color: #7f7f7f; font-weight: lighter; }
 #books-instru { width: 100%; }
 /*  books and instru end */
+
+
+@media only screen and (max-width: 500px) {
+  .has-search .form-control {
+    padding: 0.2rem 5.7rem 0.2rem 0.3rem; 
+  }
+
+}
