--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ a {
 }
 .container {
   margin: 0 auto;
-  max-width: 1272px;
+  max-width: 1280px;
 }
 
 body {
@@ -23,9 +23,9 @@ body {
 }
 .flipkart-logo {
   display: flex;
-  justify-content: space-between;
   flex-direction: column;
-  margin-right: 24px;
+  width: 20%;
+  align-items: center;
 }
 .flipkart-logo > img {
   width: 75px;
@@ -60,62 +60,50 @@ body {
   width: 10px;
 }
 
-.search > input[type="text"] {
-  /*   border: none;
-    border-radius: 2px;
-    height: 34px;
-    width: 313px; */
-}
-
-/* Styles for wrapping the search box */
-
-.main {
-  /* width: 50%;
-    margin: 50px auto; */
-}
-
-/* Bootstrap 4 text input with search icon */
-
-.navbar > .left {
-  width: 60%;
-  float: left;
-  justify-content: center;
+.search {
+  position: relative;
+  width: 100%;
   display: flex;
 }
-.navbar > .right {
-  width: 35%;
-  float: right;
-  justify-content: space-evenly;
-  display: flex;
-  align-items: center;
-}
 
-.has-search .form-control {
-  padding-left: 2.375rem;
+span.fa.fa-search.form-control-feedback {
+  position: absolute;
+  z-index: 9;
+  right: 17px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+.search [type="text"] {
   display: block;
-  width: 81%;
-  height: calc(1.25rem + 2px);
-  padding: 0.4rem 11.7rem 0.4rem 0.6rem;
+  width: 100%;
+  padding: 9px 12px;
   font-size: 1rem;
-  line-height: 1.5;
   color: #495057;
   background-color: #fff;
   background-clip: padding-box;
   border: 1px solid #dbdbdb;
   border-radius: 1px;
   transition: 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  position: relative;
+  max-width: 100%;
 }
-
-.has-search .form-control-feedback {
-  position: absolute;
-  z-index: 2;
-  display: block;
-  width: 62.375rem;
-  height: 2.375rem;
-  line-height: 2.375rem;
-  text-align: center;
-  pointer-events: none;
+.fa-search:before {
   color: #2874f0;
+}
+/* Styles for wrapping the search box */
+
+/* Bootstrap 4 text input with search icon */
+
+.navbar > .left {
+  justify-content: center;
+  display: flex;
+  width: 41%;
+}
+.navbar > .right {
+  width: 30%;
+  justify-content: space-evenly;
+  display: flex;
+  align-items: center;
 }
 
 .login-btn > a {
@@ -156,10 +144,10 @@ section#top-items {
 .top-items-main {
   display: flex;
   padding: 10px 0;
-  justify-content: space-evenly;
+  justify-content: space-evenly; flex-wrap: wrap;
 }
 .top-item > img {
-  width: 67px;
+  width: 100%;
 }
 .top-item {
   display: flex;
@@ -167,15 +155,22 @@ section#top-items {
   align-items: center;
   font-weight: bold;
   font-size: 14px;
+  width: 9%;
 }
-.top-item {
+.top-item p {
+  cursor: pointer;
 }
 .top-item .fa-angle-down {
   padding: 0 5px;
   font-weight: bold;
 }
-.top-item:hover .fa-angle-down {
+.fa-angle-down {
+  transition-duration: 500ms, 1500ms;
+}
+
+.fa-angle-down .item-text :hover {
   transform: rotate(180deg);
+  transition-duration: 500ms, 1500ms;
 }
 
 /* top offers section ends */
@@ -190,23 +185,24 @@ section#deals-of-the-day-section {
   justify-content: space-evenly;
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
 }
-
 
 .deals-item-img img {
   width: 100%;
-  height: 150px;
+
   display: flex;
   align-items: center;
   justify-content: center;
 }
 .title .left {
-flex-direction: column;
+  flex-direction: column;
   display: flex;
 }
 #timer-icon {
   width: 26px;
   display: flex;
+  margin: 0 10px;
 }
 .deals-of-the-day p {
   font-size: 22px;
@@ -214,21 +210,23 @@ flex-direction: column;
   font-weight: 500;
   align-items: center;
 }
-.deals-of-the-day h4 { font-weight: lighter; opacity: 0.7; }
+.deals-of-the-day h4 {
+  font-weight: lighter;
+  opacity: 0.7;
+}
 .deals-of-the-day > .title {
   font-weight: 600;
-  padding: 0 0 17px 0;
   justify-content: space-between;
   display: flex;
   flex-direction: row;
   margin: 0 0 17px 0;
-  padding: 10px 5px 10px 5px;
+  padding: 10px;
   box-shadow: 0 0px 4px 1px rgb(0 0 0 / 16%);
+  align-items: center;
 }
 .title .timer {
   font-weight: lighter;
   font-size: 15px;
-  
 }
 .title .fa-clock-o {
   font-size: 21px;
@@ -240,9 +238,8 @@ flex-direction: column;
 }
 
 .deals-of-the-day {
-  width: 75%; 
+  width: 75%;
   box-shadow: 0 2px 4px 1px rgb(0 0 0 / 2%);
-  padding: 5px 5px 10px 5px;
 }
 .advertis {
   width: 25%;
@@ -255,7 +252,7 @@ flex-direction: column;
 }
 
 .deals-of-the-day .deals-item {
-  width: 30%;
+  width: 13%;
   text-align: center;
   display: flex;
   align-items: center;
@@ -299,22 +296,79 @@ flex-direction: column;
   min-height: 150px;
 }
 
-
-
-.left h3{ color: #7f7f7f; font-weight: lighter; }
-#books-instru { width: 100%; }
+.left h3 {
+  color: #7f7f7f;
+  font-weight: lighter;
+}
+#books-instru {
+  width: 100%;
+}
 /* deals of the day section end */
 
-
 /* books and instru start */
-.left h3{ color: #7f7f7f; font-weight: lighter; }
-#books-instru { width: 100%; }
+.left h3 {
+  color: #7f7f7f;
+  font-weight: lighter;
+}
+#books-instru {
+  width: 100%;
+}
 /*  books and instru end */
-
-
-@media only screen and (max-width: 500px) {
-  .has-search .form-control {
-    padding: 0.2rem 5.7rem 0.2rem 0.3rem; 
+@media (max-width: 1279px) {
+  .container {
+    width: 1024px;
   }
+  .deals-of-the-day .deals { justify-content: flex-start; }
+  .deals-of-the-day .deals-item { width: 21%; margin-bottom: 30px;}
+  .deals-item-img {
+    min-height: 74%;
+}
+}
 
+@media (max-width: 1023px) {
+  .container {
+    width: 768px;
+  }
+  .deals-of-the-day .deals-item {
+    width: 27.3%; }
+    .deals-of-the-day {
+      width: 65%;}
+      .advertis {
+        width: 25%;
+    }
+
+
+}
+
+@media (max-width: 767px) {
+  .container { width: 641px;  }
+
+
+}
+
+@media (max-width: 640px) {
+  .container {
+    width: 480px;
+  }
+  .advertis img {
+    height: 176px;
+  }
+  .navbar > .right a {
+    font-size: 12px;
+  }
+  .login-btn > a {
+    padding: 2px 15px;
+  }
+}
+
+@media (max-width: 479px) {
+  .container {
+    width: 375px;
+  }
+}
+
+@media (max-width: 375px) {
+  .container {
+    width: 320px;
+  }
 }
