--- a/css/style.css
+++ b/css/style.css
@@ -144,7 +144,8 @@ section#top-items {
 .top-items-main {
   display: flex;
   padding: 10px 0;
-  justify-content: space-evenly; flex-wrap: wrap;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
 }
 .top-item > img {
   width: 100%;
@@ -163,15 +164,59 @@ section#top-items {
 .top-item .fa-angle-down {
   padding: 0 5px;
   font-weight: bold;
+} 
+/* drop down starts */
+.dropdown {
+  position: relative;
+  display: block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {
+  background-color: #ddd;
+  color: #1a51aa;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+  color: #1a51aa;
+}
+
+#drpbtn:hover {
+  color: #1a51aa;
+}
+
+.fa-angle-down:hover .dropdown-content {
+  display: block;
+}
+
+.dropbtn:hover .fa-angle-down {
+  transform: rotate(180deg);
+  transition-duration: 500ms, 1500ms;
+  color: #1a51aa;
 }
 .fa-angle-down {
+  cursor: pointer;
   transition-duration: 500ms, 1500ms;
 }
 
-.fa-angle-down .item-text :hover {
-  transform: rotate(180deg);
-  transition-duration: 500ms, 1500ms;
-}
+
+/* dropdown end */
 
 /* top offers section ends */
 
@@ -190,7 +235,6 @@ section#deals-of-the-day-section {
 
 .deals-item-img img {
   width: 100%;
-
   display: flex;
   align-items: center;
   justify-content: center;
@@ -252,7 +296,7 @@ section#deals-of-the-day-section {
 }
 
 .deals-of-the-day .deals-item {
-  width: 13%;
+  width: 11%;
   text-align: center;
   display: flex;
   align-items: center;
@@ -318,11 +362,16 @@ section#deals-of-the-day-section {
   .container {
     width: 1024px;
   }
-  .deals-of-the-day .deals { justify-content: flex-start; }
-  .deals-of-the-day .deals-item { width: 21%; margin-bottom: 30px;}
+  .deals-of-the-day .deals {
+    justify-content: flex-start;
+  }
+  .deals-of-the-day .deals-item {
+    width: 21%;
+    margin-bottom: 30px;
+  }
   .deals-item-img {
     min-height: 74%;
-}
+  }
 }
 
 @media (max-width: 1023px) {
@@ -330,25 +379,29 @@ section#deals-of-the-day-section {
     width: 768px;
   }
   .deals-of-the-day .deals-item {
-    width: 27.3%; }
-    .deals-of-the-day {
-      width: 65%;}
-      .advertis {
-        width: 25%;
-    }
-
-
+    width: 27.3%;
+  }
+  .deals-of-the-day {
+    width: 65%;
+  }
+  .advertis {
+    width: 25%;
+  }
+  .top-item {
+    width: 12%; 
+  } 
+  .top-items-main {  justify-content: flex-start; }
 }
 
 @media (max-width: 767px) {
-  .container { width: 641px;  }
-
-
+  .container {
+    width: 641px;
+  }
 }
 
 @media (max-width: 640px) {
   .container {
-    width: 480px;
+    width: 580px;
   }
   .advertis img {
     height: 176px;
@@ -359,16 +412,63 @@ section#deals-of-the-day-section {
   .login-btn > a {
     padding: 2px 15px;
   }
+  .top-item {
+    width: 17%; 
+  } 
 }
 
 @media (max-width: 479px) {
   .container {
     width: 375px;
   }
+  .navbar > .right a {
+    font-size: 10px;
+}
+.navbar > .right a {
+  font-size: 9px;
+}
+
+#plus { font-size: 9px; }
+#expore { font-size: 9px; }
+.search [type="text"] {
+  font-size: 0.7rem; }
+  .top-item {
+    width: 20%;
+    margin: 4px 0;
+}
+.deals-of-the-day p {
+  font-size: 12px; }
+  .deals-of-the-day .deals-item {
+    width: 37.3%;
+}
+  #timer-icon {
+    width: 21px;
+    margin: 0 3px;
+}
+.title .timer {
+  font-size: 9px;
+}
+.right > a {
+    padding: 5px;
+    font-size: 0.6rem;
+    text-align: center;
+}
+.advertis img {
+  height: 130px;
+}
+.navbar > .left {
+  height: 100%;  }
+  .navbar > .right {
+    align-items: baseline;
+  }
+
 }
 
 @media (max-width: 375px) {
   .container {
     width: 320px;
   }
+  .navbar > .right a {
+    font-size: 7px;
+}
 }
