final commit before submitting

--- a/css/style.css
+++ b/css/style.css
@@ -155,8 +155,8 @@ section#top-items {
   flex-direction: column;
   align-items: center;
   font-weight: bold;
-  font-size: 14px;
-  width: 9%;
+  font-size: 11px;
+  width: 7%;
 }
 .top-item p {
   cursor: pointer;
@@ -164,7 +164,7 @@ section#top-items {
 .top-item .fa-angle-down {
   padding: 0 5px;
   font-weight: bold;
-} 
+}
 /* drop down starts */
 .dropdown {
   position: relative;
@@ -182,7 +182,8 @@ section#top-items {
 
 .dropdown-content a {
   color: black;
-  padding: 12px 16px;
+  padding: 9px 105px 15px 21px;
+  width: 100%;
   text-decoration: none;
   display: block;
 }
@@ -214,7 +215,6 @@ section#top-items {
   cursor: pointer;
   transition-duration: 500ms, 1500ms;
 }
-
 
 /* dropdown end */
 
@@ -340,10 +340,6 @@ section#deals-of-the-day-section {
   min-height: 150px;
 }
 
-.left h3 {
-  color: #7f7f7f;
-  font-weight: lighter;
-}
 #books-instru {
   width: 100%;
 }
@@ -379,7 +375,10 @@ section#deals-of-the-day-section {
     width: 768px;
   }
   .deals-of-the-day .deals-item {
-    width: 27.3%;
+    width: 25.3%;
+  }
+  .navbar > .right {
+    width: 36%;
   }
   .deals-of-the-day {
     width: 65%;
@@ -388,14 +387,51 @@ section#deals-of-the-day-section {
     width: 25%;
   }
   .top-item {
-    width: 12%; 
-  } 
-  .top-items-main {  justify-content: flex-start; }
+    width: 13.9%;
+  }
+  .top-items-main {
+    justify-content: flex-start;
+  }
 }
 
-@media (max-width: 767px) {
+@media (max-width: 768px) {
   .container {
     width: 641px;
+  }
+  .right > a {
+    font-size: 14px;
+    text-align: center;
+    padding: 7px;
+  }
+  .deals-of-the-day p {
+    font-size: 14px;
+  }
+  .title .timer {
+    font-size: 13px;
+  }
+  .login-btn > a {
+    padding: 5px 19px;
+  }
+  .deals-of-the-day {
+    width: 73%;
+  }
+  .left h3 {
+    font-size: 14px;
+  }
+  .top-item {
+    width: 16.9%;
+  }
+  .flipkart-logo {
+    width: 19%;
+  }
+  .login-btn > a {
+    padding: 6px 21px;
+  }
+  .navbar > .left {
+    width: 37%;
+  }
+  .advertis img {
+    height: 287px;
   }
 }
 
@@ -404,7 +440,7 @@ section#deals-of-the-day-section {
     width: 580px;
   }
   .advertis img {
-    height: 176px;
+    height: 215px;
   }
   .navbar > .right a {
     font-size: 12px;
@@ -412,63 +448,96 @@ section#deals-of-the-day-section {
   .login-btn > a {
     padding: 2px 15px;
   }
+  .left h3 {
+    font-size: 13px;
+  }
   .top-item {
-    width: 17%; 
-  } 
+    width: 19%;
+  }
+  .deals-item-img {
+    min-height: 62;
+  }
+  section#deals-of-the-day-section {
+    padding: 20px 0 70px 0;
+  }
 }
 
 @media (max-width: 479px) {
   .container {
     width: 375px;
   }
+  .deals-of-the-day p {
+    font-size: 13px;
+  }
+  .flipkart-logo {
+    width: 21%;
+  }
+  .flipkart-logo > img {
+    width: 64px;
+  }
   .navbar > .right a {
     font-size: 10px;
-}
-.navbar > .right a {
-  font-size: 9px;
-}
-
-#plus { font-size: 9px; }
-#expore { font-size: 9px; }
-.search [type="text"] {
-  font-size: 0.7rem; }
+  }
+  .navbar > .right a {
+    font-size: 9px;
+  }
+  #plus {
+    font-size: 10px;
+  }
+  #explore {
+    font-size: 10px;
+  }
+  .search [type="text"] {
+    font-size: 0.6rem;
+  }
   .top-item {
     width: 20%;
     margin: 4px 0;
-}
-.deals-of-the-day p {
-  font-size: 12px; }
+  }
   .deals-of-the-day .deals-item {
     width: 37.3%;
-}
+  }
   #timer-icon {
     width: 21px;
     margin: 0 3px;
-}
-.title .timer {
-  font-size: 9px;
-}
-.right > a {
+  }
+  .title .timer {
+    font-size: 9px;
+  }
+  .right > a {
     padding: 5px;
     font-size: 0.6rem;
     text-align: center;
-}
-.advertis img {
-  height: 130px;
-}
-.navbar > .left {
-  height: 100%;  }
+  }
+  .advertis img {
+    height: 130px;
+  }
+  .navbar > .left {
+    height: 100%;
+  }
   .navbar > .right {
     align-items: baseline;
   }
   .deals-of-the-day {
     width: 100%;
-}
-.advertis {
+  }
 
-  display: none;
-}
-
+  .advertis {
+    display: none;
+  }
+  span.fa.fa-search.form-control-feedback {
+    right: 8px;
+    font-size: 12px;
+  }
+  .search [type="text"] {
+    padding: 5px 5px;
+  }
+  .top-item p {
+    font-size: 9px;
+  }
+  .left h3 {
+    font-size: 11px;
+  }
 }
 
 @media (max-width: 375px) {
@@ -477,5 +546,5 @@ section#deals-of-the-day-section {
   }
   .navbar > .right a {
     font-size: 7px;
-}
+  }
 }
